# ITMO_programming_2semester

./: README.md
1_cyclic_buffer/: CMakeLists.txt  circular_buffer.h  main.cpp
2_REST_(curl)/: CMakeLists.txt  functions.h  main.cpp  realization_fun.cpp
3_cubeRubiks/: CMakeLists.txt  cube.h  cube_fun.cpp  main.cpp  main_functions.h  main_functions_realiz.cpp  menu.h  menu_fun.cpp  structures.h
